--- a/03Nodejs-Express-Koa2入门实战/package.json
+++ b/03Nodejs-Express-Koa2入门实战/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongodb": "^3.6.4"
+    "mongodb": "^3.6.4",
+    "supervisor": "^0.12.0"
   }
 }
