--- a/03Nodejs-Express-Koa2入门实战/package.json
+++ b/03Nodejs-Express-Koa2入门实战/package.json
@@ -9,9 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
+    "jsdom": "^16.4.0",
+    "koa-logger": "^3.2.1",
+    "koa-router": "^10.0.0",
     "mongodb": "^3.6.4",
+    "puppeteer": "^7.1.0",
     "supervisor": "^0.12.0"
+  },
+  "devDependencies": {
+    "koa": "^2.13.1"
   }
 }
