--- a/03Nodejs-Express-Koa2入门实战/package.json
+++ b/03Nodejs-Express-Koa2入门实战/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^3.1.0",
+    "@koa/multer": "^3.0.0",
     "@koa/router": "^10.0.0",
     "art-template": "^4.13.2",
     "axios": "^0.21.1",
@@ -18,19 +19,20 @@
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "jsdom": "^16.4.0",
-    "koa-logger": "^3.2.1",
-    "koa-router": "^10.0.0",
-    "koa-session": "^6.1.0",
-    "koa-views": "^7.0.0",
-    "mongodb": "^3.6.4",
-    "mongoose": "^5.11.17",
-    "puppeteer": "^7.1.0",
-    "supervisor": "^0.12.0",
     "koa": "^2.13.1",
     "koa-art-template": "^1.1.1",
     "koa-bodyparser": "^4.3.0",
-    "koa-static": "^5.0.0"
+    "koa-logger": "^3.2.1",
+    "koa-multer": "^1.0.2",
+    "koa-router": "^10.0.0",
+    "koa-session": "^6.1.0",
+    "koa-static": "^5.0.0",
+    "koa-views": "^7.0.0",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.17",
+    "multer": "^1.4.2",
+    "puppeteer": "^7.1.0",
+    "supervisor": "^0.12.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
