--- a/project/blog/package.json
+++ b/project/blog/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^2.0.1",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vant": "^3.0.6",
     "vue": "^3.0.0",
